# EMtools

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  _audit_hardcoded.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pubspec.yaml  windows_installer.iss
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  deploy.yml  release.yml
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  paste.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: paste.py  settings.py  user.py
backend/app/schemas/: __init__.py  admin.py  paste.py  token.py  user.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_paste.py  test_security.py  test_users.py
docs/: SECURITY.md  index.html
docs/app/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  main.dart.js_1.part.js  main.dart.js_10.part.js  main.dart.js_100.part.js  (+89 more)
frontend/: .dockerignore  Dockerfile  a11y-results.txt  a11y-test-playwright.js  a11y-test-simple.js  a11y-test.js  factcheck.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  manifest.json
lib/: main.dart
web/: index.html  manifest.json
wiki/: API-Documentation.md  Admin-Guide.md  Changelog.md  Contributing.md  Features.md  Getting-Started.md  Home.md  Installation.md  _Sidebar.md
(+221 files in other folders)
